# control-motor_controller

./: .gitignore  CMakeLists.txt  InputShaper.hpp  PID.cpp  PID.hpp  PIV.cpp  PIV.hpp  PositionVelocityTorqueCascade.cpp  RK4Integrator.cpp  RK4Integrator.hpp  RK4_Integrator.cpp  Ramp.cpp  Ramp.hpp  SimpleIntegrator.cpp  SimpleIntegrator.hpp  manifest.xml  motor_controller.pc.in  piv.cpp  piv.hpp  ramp.cpp  ramp.h  rk4_integrator.cpp  simpleintegrator.cpp
compat/: Ramp.hpp  SimpleIntegrator.hpp
src/: CMakeLists.txt  IRSpeedFromPositionFilter.cpp  IRSpeedFromPositionFilter.hpp  InputShaper.cpp  PID.cpp  PID.hpp  PIV.cpp  PIV.hpp  PositionVelocityTorqueCascade.hpp  RK4Integrator.cpp  RK4Integrator.hpp  SimpleIntegrator.cpp  SimpleIntegrator.hpp
src/compat/: InputShaper.hpp  PID.hpp  PIV.hpp  PositionVelocityTorqueCascade.hpp  RK4Integrator.hpp  Ramp.hpp  SimpleIntegrator.hpp
test/: CMakeLists.txt  suite.cpp  test_PID.cpp
